# Legatia

./: .gitignore  Cargo.toml  DAO_IMPLEMENTATION_PLAN.md  FAMILY_VAULT_PLAN.md  MILESTONES.md  REACT_MIGRATION_PLAN.md  README.md  TESTING.md  dfx.json  mobilePlan.md  package-lock.json  package.json  projectStructure.md  projectStructure.txt
.dfx/local/: canister_ids.json
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
Legatia_new_frontend_react/: README.md  package.json
Legatia_new_frontend_react/src/: App.tsx
Legatia_new_frontend_react/src/hooks/: useAuth.ts  useFamily.ts
Legatia_new_frontend_react/src/pages/: CreateFamilyPage.tsx  CreateProfilePage.tsx  FamiliesPage.tsx  LoginPage.tsx  ProfilePage.tsx
Legatia_new_frontend_react/src/services/: auth.ts
Legatia_new_frontend_react/src/stores/: authStore.ts  familyStore.ts
Legatia_token/: .gitignore  Cargo.toml  README.md  dfx.json
Legatia_token/src/legatia_token/: Cargo.toml  legatia_token.did
Legatia_token/src/legatia_token/src/: lib.rs
backend/: Cargo.toml
backend/candid/: families.did  invites.did  profiles.did  relationships.did
backend/canisters/families/: Cargo.toml
backend/canisters/families/src/: lib.rs
backend/canisters/profiles/: Cargo.toml
backend/canisters/profiles/src/: lib.rs
backend/clone_test/: Cargo.toml
docs/: IMPLEMENTATION_SUMMARY.md
frontend/: index.html  jest.config.js  package.json  setupTests.js  vite.config.js
frontend/src/: App.tsx  AuthContext.tsx
src/Legatia_new_backend/: Cargo.toml  Legatia_new_backend.did
src/Legatia_new_frontend/: .eslintrc.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/Legatia_new_frontend_old/: index.html
tests/: README.md  run_all_tests.sh  test_backend.sh  test_complete_system.sh  test_ghost_profile_workflow.sh  test_invitation_system.sh
(+163 files in other folders)
