[package]
name = "legatia_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ic-stable-structures = "0.6"

# ICRC-1 token standard dependencies
icrc-ledger-types = "0.1"
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.ic-cdk-timers]
version = "0.11"

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []