[package]
name = "families"
version = "0.1.0"
edition = "2024"

[dependencies]
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
candid = "0.10.13"

[lib]
crate-type = ["cdylib", "rlib"] # Required for compiling to WebAssembly